made changes on the images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="hero">
     <div class="header">
       <div class="logo">
-        <img src="/img/pngwing.com.png" alt="">
+        <img src="./img/pngwing.com.png" alt="">
       </div>
       <div class="loglink">
         <a class="btn-signin" href="#">Sign In</a>
