added google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -1,240 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="JCO4cDJVa0EJmJs_i1f3o2XQZtgiuEeTUqIL7qNACqs"
+    />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
 
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="css/utilities.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Welcome to Jimflix</title>
+  </head>
 
-  <link rel="stylesheet" href="css/utilities.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <title>Welcome to Jimflix</title>
-</head>
-
-<body>
-  <div class="hero">
-    <div class="header">
-      <div class="logo">
-        <img src="./img/pngwing.com.png" alt="">
-      </div>
-      <div class="loglink">
-        <a class="btn-signin" href="#">Sign In</a>
-      </div>
-    </div>
-    <div class="content">
-      <h1>Unlimited movies, TV shows, and more</h1>
-      <p class="watch">Watch anywhere. Cancel anytime.</p>
-      <p>Ready to watch? Enter your email to create or restart your membership</p>
-      <div class="form">
-        <input type="search" name="search" id="search" placeholder="Email address">
-        <a class="btn" href="#">
-          <p>Get Started</p>
-          <span class="material-symbols-outlined">
-            arrow_forward_ios
-          </span>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <div class="info-container bg-dark">
-    <div class="column">
-      <div class="info">
-        <h1>Enjoy on your TV</h1>
-        <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
-      </div>
-    </div>
-    <div class="column">
-      <div class="image">
-        <img src="img/tv.png" alt="">
-      </div>
-    </div>
-  </div>
-
-
-  <div class="info-container bg-dark flex-opposite">
-    <div class="column">
-      <div class="info">
-        <h1>Download your shows to watch offline</h1>
-        <p>Save your favorites easily and always have something to watch.</p>
-      </div>
-    </div>
-    <div class="column">
-      <div class="image">
-        <img src="img/mobile-0819.jpg" alt="">
-      </div>
-    </div>
-  </div>
-
-  <div class="info-container bg-dark tweak">
-    <div class="column">
-      <div class="info">
-        <h1>Watch everywhere</h1>
-        <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
-      </div>
-    </div>
-    <div class="column">
-      <div class="image">
-        <!-- <img src="img/NG-en-20230612-popsignuptwoweeks-perspective_alpha_website_medium.jpg" alt=""> -->
-      </div>
-    </div>
-  </div>
-
-
-  <div class="info-container bg-dark flex-opposite">
-    <div class="column">
-      <div class="info">
-        <h1>Create profiles for kids</h1>
-        <p>Send kids on adventures with their favorite characters in a space made just for them --free with your
-          membership.</p>
-      </div>
-    </div>
-    <div class="column">
-      <div class="image">
-        <img
-          src="img/AAAABejKYujIIDQciqmGJJ8BtXkYKKTi5jiqexltvN1YmvXYIfX8B9CYwooUSIzOKneblRFthZAFsYLMgKMyNfeHwk16DmEkpIIcb6A3.png"
-          alt="">
-      </div>
-    </div>
-  </div>
-
-
-
-
-  <div class="info-container bg-dark faq">
-    <h1>Frequently Asked Questions</h1>
-    <div class="column">
-
-      <div class="faq-box">
-        <div class="question">
-          <p>What is Netflix?</p>
+  <body>
+    <div class="hero">
+      <div class="header">
+        <div class="logo">
+          <img src="./img/pngwing.com.png" alt="" />
         </div>
-        <div class="icon">
-          <span class="material-symbols-outlined">
-            add
-          </span>
+        <div class="loglink">
+          <a class="btn-signin" href="#">Sign In</a>
         </div>
       </div>
-
-      <div class="faq-box">
-        <div class="question">
-          <p>How much does Netflix cost?</p>
+      <div class="content">
+        <h1>Unlimited movies, TV shows, and more</h1>
+        <p class="watch">Watch anywhere. Cancel anytime.</p>
+        <p>
+          Ready to watch? Enter your email to create or restart your membership
+        </p>
+        <div class="form">
+          <input
+            type="search"
+            name="search"
+            id="search"
+            placeholder="Email address"
+          />
+          <a class="btn" href="#">
+            <p>Get Started</p>
+            <span class="material-symbols-outlined"> arrow_forward_ios </span>
+          </a>
         </div>
-        <div class="icon">
-          <span class="material-symbols-outlined">
-            add
-          </span>
-        </div>
-      </div>
-
-      <div class="faq-box">
-        <div class="question">
-          <p>Where can I watch?</p>
-        </div>
-        <div class="icon">
-          <span class="material-symbols-outlined">
-            add
-          </span>
-        </div>
-      </div>
-
-      <div class="faq-box">
-        <div class="question">
-          <p>How do I cancel?</p>
-        </div>
-        <div class="icon">
-          <span class="material-symbols-outlined">
-            add
-          </span>
-        </div>
-      </div>
-
-      <div class="faq-box">
-        <div class="question">
-          <p>What can i watch on Netflix?</p>
-        </div>
-        <div class="icon">
-          <span class="material-symbols-outlined">
-            add
-          </span>
-        </div>
-      </div>
-
-      <div class="faq-box">
-        <div class="question">
-          <p>Is Netflix good for kids?</p>
-        </div>
-        <div class="icon">
-          <span class="material-symbols-outlined">
-            add
-          </span>
-        </div>
-      </div>
-
-    </div>
-    <div class="content membership">
-      <p>Ready to watch? Enter your email to create or restart your membership</p>
-      <div class="form">
-        <input type="search" name="search" placeholder="Email address">
-        <a class="btn" href="#">
-          <p>Get Started</p>
-          <span class="material-symbols-outlined">
-            arrow_forward_ios
-          </span>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <div class="info-container bg-dark footer">
-    <div class="contact">
-      <a href="#">Questions? Contact us.</a>
-    </div>
-    <div class="links-wrap">
-      <div class="links">
-        <a href="#">FAQ</a>
-        <a href="#">Media Center</a>
-        <a href="#">Ways to Watch</a>
-        <a href="#">Cookie Preference</a>
-        <a href="#">Speed Test</a>
-      </div>
-      <div class="links">
-        <a href="#">Help Center</a>
-        <a href="#">Investor Relations</a>
-        <a href="#">Terms of Use</a>
-        <a href="#">Corporate Information</a>
-        <a href="#">Legal Notices</a>
-      </div>
-      <div class="links">
-        <a href="#">Account</a>
-        <a href="#">Jobs</a>
-        <a href="#">Privacy</a>
-        <a href="#">Contact Us</a>
-        <a href="#">Only on Netflix</a>
       </div>
     </div>
 
-    <div class="button">
-      <button>
-        <span class="material-symbols-outlined">
-          language
-        </span>
-        <p>English</p>
-        <span class="material-symbols-outlined">
-          arrow_drop_down
-        </span>
-      </button>
+    <div class="info-container bg-dark">
+      <div class="column">
+        <div class="info">
+          <h1>Enjoy on your TV</h1>
+          <p>
+            Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray
+            players, and more.
+          </p>
+        </div>
+      </div>
+      <div class="column">
+        <div class="image">
+          <img src="img/tv.png" alt="" />
+        </div>
+      </div>
     </div>
 
-    <div class="trademark">
-      <p>Netflix Nigeria</p>
+    <div class="info-container bg-dark flex-opposite">
+      <div class="column">
+        <div class="info">
+          <h1>Download your shows to watch offline</h1>
+          <p>Save your favorites easily and always have something to watch.</p>
+        </div>
+      </div>
+      <div class="column">
+        <div class="image">
+          <img src="img/mobile-0819.jpg" alt="" />
+        </div>
+      </div>
     </div>
 
-  </div>
+    <div class="info-container bg-dark tweak">
+      <div class="column">
+        <div class="info">
+          <h1>Watch everywhere</h1>
+          <p>
+            Stream unlimited movies and TV shows on your phone, tablet, laptop,
+            and TV.
+          </p>
+        </div>
+      </div>
+      <div class="column">
+        <div class="image">
+          <!-- <img src="img/NG-en-20230612-popsignuptwoweeks-perspective_alpha_website_medium.jpg" alt=""> -->
+        </div>
+      </div>
+    </div>
 
+    <div class="info-container bg-dark flex-opposite">
+      <div class="column">
+        <div class="info">
+          <h1>Create profiles for kids</h1>
+          <p>
+            Send kids on adventures with their favorite characters in a space
+            made just for them --free with your membership.
+          </p>
+        </div>
+      </div>
+      <div class="column">
+        <div class="image">
+          <img
+            src="img/AAAABejKYujIIDQciqmGJJ8BtXkYKKTi5jiqexltvN1YmvXYIfX8B9CYwooUSIzOKneblRFthZAFsYLMgKMyNfeHwk16DmEkpIIcb6A3.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
 
-</body>
+    <div class="info-container bg-dark faq">
+      <h1>Frequently Asked Questions</h1>
+      <div class="column">
+        <div class="faq-box">
+          <div class="question">
+            <p>What is Netflix?</p>
+          </div>
+          <div class="icon">
+            <span class="material-symbols-outlined"> add </span>
+          </div>
+        </div>
 
+        <div class="faq-box">
+          <div class="question">
+            <p>How much does Netflix cost?</p>
+          </div>
+          <div class="icon">
+            <span class="material-symbols-outlined"> add </span>
+          </div>
+        </div>
+
+        <div class="faq-box">
+          <div class="question">
+            <p>Where can I watch?</p>
+          </div>
+          <div class="icon">
+            <span class="material-symbols-outlined"> add </span>
+          </div>
+        </div>
+
+        <div class="faq-box">
+          <div class="question">
+            <p>How do I cancel?</p>
+          </div>
+          <div class="icon">
+            <span class="material-symbols-outlined"> add </span>
+          </div>
+        </div>
+
+        <div class="faq-box">
+          <div class="question">
+            <p>What can i watch on Netflix?</p>
+          </div>
+          <div class="icon">
+            <span class="material-symbols-outlined"> add </span>
+          </div>
+        </div>
+
+        <div class="faq-box">
+          <div class="question">
+            <p>Is Netflix good for kids?</p>
+          </div>
+          <div class="icon">
+            <span class="material-symbols-outlined"> add </span>
+          </div>
+        </div>
+      </div>
+      <div class="content membership">
+        <p>
+          Ready to watch? Enter your email to create or restart your membership
+        </p>
+        <div class="form">
+          <input type="search" name="search" placeholder="Email address" />
+          <a class="btn" href="#">
+            <p>Get Started</p>
+            <span class="material-symbols-outlined"> arrow_forward_ios </span>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="info-container bg-dark footer">
+      <div class="contact">
+        <a href="#">Questions? Contact us.</a>
+      </div>
+      <div class="links-wrap">
+        <div class="links">
+          <a href="#">FAQ</a>
+          <a href="#">Media Center</a>
+          <a href="#">Ways to Watch</a>
+          <a href="#">Cookie Preference</a>
+          <a href="#">Speed Test</a>
+        </div>
+        <div class="links">
+          <a href="#">Help Center</a>
+          <a href="#">Investor Relations</a>
+          <a href="#">Terms of Use</a>
+          <a href="#">Corporate Information</a>
+          <a href="#">Legal Notices</a>
+        </div>
+        <div class="links">
+          <a href="#">Account</a>
+          <a href="#">Jobs</a>
+          <a href="#">Privacy</a>
+          <a href="#">Contact Us</a>
+          <a href="#">Only on Netflix</a>
+        </div>
+      </div>
+
+      <div class="button">
+        <button>
+          <span class="material-symbols-outlined"> language </span>
+          <p>English</p>
+          <span class="material-symbols-outlined"> arrow_drop_down </span>
+        </button>
+      </div>
+
+      <div class="trademark">
+        <p>Netflix Nigeria</p>
+      </div>
+    </div>
+  </body>
 </html>
